--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <!-- Add Fonts Here -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Condensed:wght@600&display=swap" rel="stylesheet">
     <!-- Fonts Above -->
 
     <meta charset="utf-8" />
